--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,4 @@
-name=htwg-scala-seed
+name=htwg-scala-kakuro
 title=Scala Seed for lecture Software Engineering at HTWG Konstanz
 description=This is a seed project to create a basic scala project for the lecture Software Engineering at the University of Applied Sciences HTWG Konstanz. It doesn't include a tutorial or demonstration, it's just a minimal project to start your own application from.
 tags=scala,seed
